--- a/i18n/locales/km-KH.json
+++ b/i18n/locales/km-KH.json
@@ -1,3 +1,6 @@
 {
-  "welcome": "សួរស្ដី"
+  "welcome": "សួរស្ដី",
+  "not-found": "រកមិនឃើញទំព័រ",
+  "not-found-detail": "ទំព័រដែលអ្នកកំពុងស្វែងរកមិនមានទេ។",
+  "not-found-back": "ត្រលប់ទៅទំព័រដើមវិញ"
 }
