--- a/i18n/locales/ja-JP.json
+++ b/i18n/locales/ja-JP.json
@@ -1,3 +1,6 @@
 {
-  "welcome": "ようこそ"
+  "welcome": "ようこそ",
+  "not-found": "ページが見つかりません",
+  "not-found-detail": "お探しのページは見つかりませんでした。",
+  "not-found-back": "ホームページに戻る"
 }
