feat(store): refactor api all

--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -2,5 +2,7 @@
   "welcome": "Welcome",
   "not-found": "Page not found",
   "not-found-detail": "The page you are looking for does not exist.",
-  "not-found-back": "Back to home"
+  "not-found-back": "Back to home",
+
+  "common.merchant": "Mini App"
 }
