--- a/i18n/locales/km-KH.json
+++ b/i18n/locales/km-KH.json
@@ -2,5 +2,7 @@
   "welcome": "សួរស្ដី",
   "not-found": "រកមិនឃើញទំព័រ",
   "not-found-detail": "ទំព័រដែលអ្នកកំពុងស្វែងរកមិនមានទេ។",
-  "not-found-back": "ត្រលប់ទៅទំព័រដើមវិញ"
+  "not-found-back": "ត្រលប់ទៅទំព័រដើមវិញ",
+
+  "common.merchant": "អាជីវកម្ម"
 }
