--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -4,5 +4,5 @@
   "not-found-detail": "The page you are looking for does not exist.",
   "not-found-back": "Back to home",
 
-  "common.merchant": "Mini App"
+  "common.merchant": "Merchant"
 }
